tests/source/typing/bad/testfile-undef_struct-4.c

struct A { struct B *b; };
int main(){ return 0; }

